# Spatial-TCR-package

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  spatialTCR_cli.py
core/: __init__.py  config.py  utils.py
examples/: cellular_mode_example.py  cid_mode_example.py
modes/: __init__.py  cellular_mode.py  cid_mode.py
processors/: __init__.py  mapper_processor.py  result_processor.py  spatial_processor.py  trust4_processor.py  umi_processor.py
